feat: login route with client sided seed decryption and key derivation
